--- a/pom.xml
+++ b/pom.xml
@@ -148,9 +148,9 @@
             <version>${jersey.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.gainsight</groupId>
-            <artifactId>core-api</artifactId>
-            <version>1.2.0-SNAPSHOT</version>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${jersey.version}</version>
         </dependency>
     </dependencies>
 
