--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,10 @@
         <servlet-name>JerseyApplication</servlet-name>
         <url-pattern>/api/*</url-pattern>
     </servlet-mapping>
+
+
+    <welcome-file-list>
+        <welcome-file>login.html</welcome-file>
+    </welcome-file-list>
+
 </web-app>
