--- a/pom.xml
+++ b/pom.xml
@@ -177,7 +177,7 @@
                         <version>6.1.26</version>
                         <configuration>
                             <useTestClasspath>true</useTestClasspath>
-                            <contextPath>/whoAmI</contextPath>
+                            <contextPath>/</contextPath>
                             <stopKey>1</stopKey>
                             <stopPort>9999</stopPort>
                             <connectors>
